<resources>
    <string name="app_name">Open LARM</string>
    <string name="open_activity_text">Click to Open the Door!</string>
    <string name="open_menssage">Door Opened!</string>
    <string name="open">Open</string>
    <string name="erro_wifi_menssage">LARM Wifi Not Connected!</string>
    <string name="settings_name">Settings</string>
    <string name="settings_folder_name" translatable="false">/settings</string>
    <string name="settings_activity_text">Please fill in the information and click save.</string>
    <string name="ip_example" translatable="false">198.162.200.181</string>
    <string name="ip_text" translatable="false">IP: </string>
    <string name="port_text">PORT: </string>
    <string name="port_example" translatable="false">1234</string>
    <string name="credential_text">Credential: </string>
    <string name="credential_example" translatable="false">A34DCV9Y</string>
    <string name="save">save</string>
    <string name="save_message">Settings Saved!</string>
    <string name="loading_title">Sending Requisition</string>
    <string name="loading_message">Opening Door...</string>
    <string name="insert_data">Fill the Data!</string>
    <string name="error_socket">Communication with Server Fail!</string>
    <string name="connectionOnLarm">Connecting on LARM WIFI!</string>
    <string name="password_text">Wifi Password:</string>
    <string name="password_example" translatable="false">KnowNothing!</string>
    <string name="erro_wifi_password">Change the Wifi Password!</string>
    <string name="appwidget_text">Open LARM</string>
    <string name="add_widget" translatable="false">Add widget</string>
    <string name="try_again">Try Again!</string>
</resources>

