<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_activity_text"
        android:layout_gravity="center"
        android:textAllCaps="true"
        android:layout_margin="5dp"
        android:textColor="#000"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/ip_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ip_text"
            android:layout_gravity="center"
            android:textAllCaps="true"
            android:layout_margin="10dp"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:textColor="#000"/>

        <EditText
            android:id="@+id/ip_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/ip_example"
            android:inputType="phone"
            android:layout_margin="5dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/por_text_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/port_text"
            android:layout_gravity="center"
            android:textAllCaps="true"
            android:layout_margin="10dp"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:textColor="#000"/>

        <EditText
            android:id="@+id/port_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/port_example"
            android:inputType="phone"
            android:layout_margin="5dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/credential_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/credential_text"
            android:layout_gravity="center"
            android:textAllCaps="true"
            android:layout_margin="10dp"
            android:layout_centerVertical="true"
            android:layout_alignParentStart="true"
            android:textColor="#000"/>

        <EditText
            android:id="@+id/credential_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/credential_example"
            android:inputType="textCapCharacters"
            android:layout_margin="5dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />


    </RelativeLayout>


    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:onClick="onSave"
        android:layout_gravity="center"
        android:layout_margin="10dp"/>

    <ImageView
        android:id="@+id/larm_image_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scaleType="fitCenter"
        android:src="@drawable/larm_logo" />


</LinearLayout>